deploy/healthchecks/templates/healthchecks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks
  namespace: healthchecks
  labels:
    app: healthchecks
spec:
  ports:
    - port: 8000
  selector:
    app: healthchecks
  type: ClusterIP
